--- a/spec/fixtures/vcr_cassettes/Mediable/create_media/should_register.yml
+++ b/spec/fixtures/vcr_cassettes/Mediable/create_media/should_register.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: post
-    uri: https://app.test.datacite.org/dois/10.14454/05MB-Q396/media
+    uri: https://api.test.datacite.org/dois/10.14454/05MB-Q396/media
     body:
       encoding: UTF-8
       string: '{"data":{"type":"media","attributes":{"media-type":"application/pdf","url":"https://schema.datacite.org/meta/kernel-4.1/doc/DataCite-MetadataKernel_v4.1.pdf"}}}'
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.6; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Content-Type:
       - application/vnd.api+json
       Accept:
@@ -21,7 +21,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sat, 16 Jun 2018 14:40:44 GMT
+      - Thu, 19 Jul 2018 19:31:14 GMT
       Content-Type:
       - application/vnd.api+json; charset=utf-8
       Connection:
@@ -35,18 +35,18 @@ http_interactions:
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - 1f3be1fc-7e09-4fd5-b9e4-6fd217bd85ac
+      - ef8cd814-e8ba-4747-a91e-79c52c290149
       Etag:
-      - W/"d8a685eedfb34cdf6ca2b6a96516f34c"
+      - W/"378f6b824b84ef656d35b6fda2e02ade"
       X-Runtime:
-      - '0.017960'
+      - '0.019096'
       X-Powered-By:
-      - Phusion Passenger 5.3.2
+      - Phusion Passenger 5.3.3
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.2
+      - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
-      string: '{"data":{"id":"0000-0000-0000-mzxd","type":"media","attributes":{"version":0,"url":"https://schema.datacite.org/meta/kernel-4.1/doc/DataCite-MetadataKernel_v4.1.pdf","media-type":"application/pdf","created":"2018-06-16T14:40:44.000Z","updated":"2018-06-16T14:40:44.000Z"},"relationships":{"doi":{"meta":{}}}}}'
+      string: '{"data":{"id":"0000-0000-0000-mzzy","type":"media","attributes":{"version":0,"url":"https://schema.datacite.org/meta/kernel-4.1/doc/DataCite-MetadataKernel_v4.1.pdf","media-type":"application/pdf","created":"2018-07-19T19:31:14.000Z","updated":"2018-07-19T19:31:14.000Z"},"relationships":{"doi":{"meta":{}}}}}'
     http_version: 
-  recorded_at: Sat, 16 Jun 2018 14:40:46 GMT
+  recorded_at: Thu, 19 Jul 2018 19:31:37 GMT
 recorded_with: VCR 3.0.3
