--- a/spec/fixtures/vcr_cassettes/Mediable/delete_media/should_delete.yml
+++ b/spec/fixtures/vcr_cassettes/Mediable/delete_media/should_delete.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: delete
-    uri: https://app.test.datacite.org/dois/10.14454/05MB-Q396/media/0000-0000-0000-mzxd
+    uri: https://api.test.datacite.org/dois/10.14454/05MB-Q396/media/0000-0000-0000-mzzy
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.6; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Content-Type:
       - application/vnd.api+json
       Accept:
@@ -21,7 +21,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sat, 16 Jun 2018 15:06:00 GMT
+      - Thu, 19 Jul 2018 19:32:38 GMT
       Connection:
       - keep-alive
       Status:
@@ -33,16 +33,16 @@ http_interactions:
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - c68f26ab-79de-43c3-8faa-4d544b2d9968
+      - aad55f77-fa25-4f2f-9f06-89feef877413
       X-Runtime:
-      - '0.019381'
+      - '0.015267'
       X-Powered-By:
-      - Phusion Passenger 5.3.2
+      - Phusion Passenger 5.3.3
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.2
+      - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
       string: ''
     http_version: 
-  recorded_at: Sat, 16 Jun 2018 15:06:04 GMT
+  recorded_at: Thu, 19 Jul 2018 19:33:01 GMT
 recorded_with: VCR 3.0.3
