--- a/spec/fixtures/vcr_cassettes/Metadatable/class_methods/create_metadata_invalid/should_delete.yml
+++ b/spec/fixtures/vcr_cassettes/Metadatable/class_methods/create_metadata_invalid/should_delete.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: delete
-    uri: https://app.test.datacite.org/dois/10.5072/tuprints-dev.ulb.tu-darmstadt.de.10007357
+    uri: https://api.test.datacite.org/dois/10.5072/tuprints-dev.ulb.tu-darmstadt.de.10007357
     body:
       encoding: US-ASCII
       string: ''
@@ -19,7 +19,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Thu, 19 Jul 2018 07:24:34 GMT
+      - Thu, 19 Jul 2018 19:20:24 GMT
       Connection:
       - keep-alive
       Status:
@@ -31,9 +31,9 @@ http_interactions:
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - 861005c5-136e-41cb-a2b7-88cdaf62eb19
+      - f04f0141-5e40-473a-9800-0a9192beac0e
       X-Runtime:
-      - '0.026089'
+      - '0.027741'
       X-Powered-By:
       - Phusion Passenger 5.3.3
       Server:
@@ -42,5 +42,5 @@ http_interactions:
       encoding: ASCII-8BIT
       string: ''
     http_version: 
-  recorded_at: Thu, 19 Jul 2018 07:24:36 GMT
+  recorded_at: Thu, 19 Jul 2018 19:20:46 GMT
 recorded_with: VCR 3.0.3
