--- a/spec/fixtures/vcr_cassettes/Metadatable/instance_methods/generate_unique_doi/should_generate_with_seed_checksum.yml
+++ b/spec/fixtures/vcr_cassettes/Metadatable/instance_methods/generate_unique_doi/should_generate_with_seed_checksum.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://app.test.datacite.org/10.5072/015n-mj18
+    uri: https://api.test.datacite.org/10.5072/015n-mj18
     body:
       encoding: US-ASCII
       string: ''
@@ -19,7 +19,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Thu, 19 Jul 2018 07:24:37 GMT
+      - Thu, 19 Jul 2018 19:20:26 GMT
       Content-Type:
       - application/json; charset=utf-8
       Connection:
@@ -31,9 +31,9 @@ http_interactions:
       Vary:
       - Accept-Encoding, Origin
       X-Request-Id:
-      - ebe322de-c7d4-4b9d-8a45-7efad8c86446
+      - 8682ba15-2e64-4f91-bac7-bd8698f5073b
       X-Runtime:
-      - '0.006166'
+      - '0.005675'
       X-Powered-By:
       - Phusion Passenger 5.3.3
       Server:
@@ -43,5 +43,5 @@ http_interactions:
       string: '{"errors":[{"status":"404","title":"The resource you are looking for
         doesn''t exist."}]}'
     http_version: 
-  recorded_at: Thu, 19 Jul 2018 07:24:39 GMT
+  recorded_at: Thu, 19 Jul 2018 19:20:48 GMT
 recorded_with: VCR 3.0.3
