--- a/spec/fixtures/vcr_cassettes/dois/authentication/wrong_password.yml
+++ b/spec/fixtures/vcr_cassettes/dois/authentication/wrong_password.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: get
-    uri: https://app.test.datacite.org/dois/10.14454/05mb-q396/get-url
+    uri: https://api.test.datacite.org/dois/10.14454/05mb-q396/get-url
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.11; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Accept:
       - text/html,application/json,application/xml;q=0.9, text/plain;q=0.8,image/png,*/*;q=0.5
       Authorization:
@@ -19,7 +19,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sat, 14 Jul 2018 17:41:09 GMT
+      - Thu, 19 Jul 2018 19:20:27 GMT
       Content-Type:
       - application/json; charset=utf-8
       Connection:
@@ -30,10 +30,10 @@ http_interactions:
       - no-cache
       Vary:
       - Accept-Encoding, Origin
-      X-Runtime:
-      - '0.008580'
       X-Request-Id:
-      - 77e2e7e3-6b7f-43b6-b48c-68dcc1f2efdd
+      - 7b81b75d-aeb8-4876-9b20-1242b0cd12f4
+      X-Runtime:
+      - '0.007130'
       X-Powered-By:
       - Phusion Passenger 5.3.3
       Server:
@@ -42,5 +42,5 @@ http_interactions:
       encoding: ASCII-8BIT
       string: '{"errors":[{"status":"401","title":"Bad credentials."}]}'
     http_version: 
-  recorded_at: Sat, 14 Jul 2018 17:41:15 GMT
+  recorded_at: Thu, 19 Jul 2018 19:20:49 GMT
 recorded_with: VCR 3.0.3
