--- a/spec/fixtures/vcr_cassettes/dois/doi/10_1371/journal_pbio_2001414/get_url_for_doi_not_from_DataCite.yml
+++ b/spec/fixtures/vcr_cassettes/dois/doi/10_1371/journal_pbio_2001414/get_url_for_doi_not_from_DataCite.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: get
-    uri: https://app.test.datacite.org/dois/10.1371/journal.pbio.2001414/get-url
+    uri: https://api.test.datacite.org/dois/10.1371/journal.pbio.2001414/get-url
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.11; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Accept:
       - text/html,application/json,application/xml;q=0.9, text/plain;q=0.8,image/png,*/*;q=0.5
       Authorization:
@@ -19,7 +19,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Wed, 04 Jul 2018 17:17:38 GMT
+      - Thu, 19 Jul 2018 19:20:30 GMT
       Content-Type:
       - application/json; charset=utf-8
       Connection:
@@ -30,10 +30,10 @@ http_interactions:
       - no-cache
       Vary:
       - Accept-Encoding, Origin
-      X-Runtime:
-      - '0.006558'
       X-Request-Id:
-      - 22b2469e-eacb-4054-96d0-7ab95646fc6b
+      - 0e1debf3-61c3-4783-986b-af77f2fcb6ed
+      X-Runtime:
+      - '0.006220'
       X-Powered-By:
       - Phusion Passenger 5.3.3
       Server:
@@ -43,5 +43,5 @@ http_interactions:
       string: '{"errors":[{"status":"404","title":"The resource you are looking for
         doesn''t exist."}]}'
     http_version: 
-  recorded_at: Wed, 04 Jul 2018 17:17:49 GMT
+  recorded_at: Thu, 19 Jul 2018 19:20:52 GMT
 recorded_with: VCR 3.0.3
