--- a/spec/fixtures/vcr_cassettes/dois/doi/10_5438/0012/get_url_for_doi_not_found.yml
+++ b/spec/fixtures/vcr_cassettes/dois/doi/10_5438/0012/get_url_for_doi_not_found.yml
@@ -2,45 +2,46 @@
 http_interactions:
 - request:
     method: get
-    uri: https://app.test.datacite.org/dois/10.5438/0012/get-url
+    uri: https://api.test.datacite.org/dois/10.5438/0012/get-url
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.8; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Accept:
       - text/html,application/json,application/xml;q=0.9, text/plain;q=0.8,image/png,*/*;q=0.5
       Authorization:
       - Basic <MDS_TOKEN>
   response:
     status:
-      code: 204
+      code: 404
       message: ''
     headers:
       Date:
-      - Sat, 16 Jun 2018 20:06:24 GMT
+      - Thu, 19 Jul 2018 20:33:29 GMT
+      Content-Type:
+      - application/json; charset=utf-8
       Connection:
       - keep-alive
       Status:
-      - 204 No Content
+      - 404 Not Found
       Cache-Control:
       - no-cache
       Vary:
-      - Origin
-      X-Credential-Username:
-      - datacite.datacite
+      - Accept-Encoding, Origin
       X-Request-Id:
-      - 59e2da1a-b177-4fe0-bdf5-5359aa3ca1ca
+      - 135a635c-2a0d-49a3-a53f-591afef2f551
       X-Runtime:
-      - '0.145849'
+      - '0.006333'
       X-Powered-By:
-      - Phusion Passenger 5.3.2
+      - Phusion Passenger 5.3.3
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.2
+      - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
-      string: ''
+      string: '{"errors":[{"status":"404","title":"The resource you are looking for
+        doesn''t exist."}]}'
     http_version: 
-  recorded_at: Sat, 16 Jun 2018 20:06:35 GMT
+  recorded_at: Thu, 19 Jul 2018 20:33:31 GMT
 recorded_with: VCR 3.0.3
