--- a/spec/fixtures/vcr_cassettes/media/media/10_14454/05MB-Q396/delete_media_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/media/media/10_14454/05MB-Q396/delete_media_for_doi.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: delete
-    uri: https://app.test.datacite.org/dois/10.14454/05mb-q396/media/0000-0000-0000-mzxa
+    uri: https://api.test.datacite.org/dois/10.14454/05mb-q396/media/0000-0000-0000-mzxa
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.6; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Content-Type:
       - application/vnd.api+json
       Accept:
@@ -17,32 +17,33 @@ http_interactions:
       - Basic <MDS_TOKEN>
   response:
     status:
-      code: 204
+      code: 404
       message: ''
     headers:
       Date:
-      - Thu, 14 Jun 2018 13:54:47 GMT
+      - Thu, 19 Jul 2018 20:25:37 GMT
+      Content-Type:
+      - application/json; charset=utf-8
       Connection:
       - keep-alive
       Status:
-      - 204 No Content
+      - 404 Not Found
       Cache-Control:
       - no-cache
       Vary:
-      - Origin
-      X-Runtime:
-      - '0.013434'
-      X-Credential-Username:
-      - datacite.datacite
+      - Accept-Encoding, Origin
       X-Request-Id:
-      - ca06ac38-f5ef-4fcb-a7ad-5ecad9bde5dc
+      - a6ed4d90-0d38-4cff-8de2-7f8fe0ed34ea
+      X-Runtime:
+      - '0.004691'
       X-Powered-By:
-      - Phusion Passenger 5.3.2
+      - Phusion Passenger 5.3.3
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.2
+      - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
-      string: ''
+      string: '{"errors":[{"status":"404","title":"The resource you are looking for
+        doesn''t exist."}]}'
     http_version: 
-  recorded_at: Thu, 14 Jun 2018 13:55:03 GMT
+  recorded_at: Thu, 19 Jul 2018 20:25:39 GMT
 recorded_with: VCR 3.0.3
