--- a/spec/fixtures/vcr_cassettes/media/media/10_14454/05MB-Q396/no_media_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/media/media/10_14454/05MB-Q396/no_media_for_doi.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: get
-    uri: https://app.test.datacite.org/dois/10.14454/05mb-q396/media
+    uri: https://api.test.datacite.org/dois/10.14454/05mb-q396/media
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.6; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Content-Type:
       - application/vnd.api+json
       Accept:
@@ -21,7 +21,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Thu, 14 Jun 2018 13:53:34 GMT
+      - Thu, 19 Jul 2018 20:21:22 GMT
       Content-Type:
       - application/vnd.api+json; charset=utf-8
       Connection:
@@ -32,21 +32,21 @@ http_interactions:
       - max-age=0, private, must-revalidate
       Vary:
       - Accept-Encoding, Origin
-      Etag:
-      - W/"831137dec341255d488185b3da0e070d"
-      X-Runtime:
-      - '0.009435'
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - a807dd3e-b724-4c61-8959-bce2540311e8
+      - 06e96e60-c0c1-458e-9918-a37feee7c0f9
+      Etag:
+      - W/"831137dec341255d488185b3da0e070d"
+      X-Runtime:
+      - '0.009210'
       X-Powered-By:
-      - Phusion Passenger 5.3.2
+      - Phusion Passenger 5.3.3
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.2
+      - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
       string: '{"data":[],"meta":{"total":1,"total-pages":1,"page":1}}'
     http_version: 
-  recorded_at: Thu, 14 Jun 2018 13:53:50 GMT
+  recorded_at: Thu, 19 Jul 2018 20:21:23 GMT
 recorded_with: VCR 3.0.3
