--- a/spec/fixtures/vcr_cassettes/media/media/10_14454/05MB-Q396/post_media_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/media/media/10_14454/05MB-Q396/post_media_for_doi.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: post
-    uri: https://app.test.datacite.org/dois/10.14454/05mb-q396/media
+    uri: https://api.test.datacite.org/dois/10.14454/05mb-q396/media
     body:
       encoding: UTF-8
       string: '{"data":{"type":"media","attributes":{"media-type":"application/pdf","url":"https://schema.datacite.org/meta/kernel-4.1/doc/DataCite-MetadataKernel_v4.1.pdf"}}}'
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.6; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Content-Type:
       - application/vnd.api+json
       Accept:
@@ -21,7 +21,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Thu, 14 Jun 2018 13:53:35 GMT
+      - Thu, 19 Jul 2018 20:23:51 GMT
       Content-Type:
       - application/vnd.api+json; charset=utf-8
       Connection:
@@ -32,21 +32,21 @@ http_interactions:
       - max-age=0, private, must-revalidate
       Vary:
       - Accept-Encoding, Origin
-      Etag:
-      - W/"6536aed81462b6d04b0bc64aeb4f1b11"
-      X-Runtime:
-      - '0.017025'
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - cf65808b-a02a-44ed-83d2-99943002b58f
+      - 4c009926-ca3f-4737-b64a-d1f5177ec7c5
+      Etag:
+      - W/"7929fe5213f9e0a408c239febbec1140"
+      X-Runtime:
+      - '0.016503'
       X-Powered-By:
-      - Phusion Passenger 5.3.2
+      - Phusion Passenger 5.3.3
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.2
+      - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
-      string: '{"data":{"id":"0000-0000-0000-mzxa","type":"media","attributes":{"version":0,"url":"https://schema.datacite.org/meta/kernel-4.1/doc/DataCite-MetadataKernel_v4.1.pdf","media-type":"application/pdf","created":"2018-06-14T13:53:35.000Z","updated":"2018-06-14T13:53:35.000Z"},"relationships":{"doi":{"meta":{}}}}}'
+      string: '{"data":{"id":"0000-0000-0000-n001","type":"media","attributes":{"version":2,"url":"https://schema.datacite.org/meta/kernel-4.1/doc/DataCite-MetadataKernel_v4.1.pdf","media-type":"application/pdf","created":"2018-07-19T20:23:51.000Z","updated":"2018-07-19T20:23:51.000Z"},"relationships":{"doi":{"meta":{}}}}}'
     http_version: 
-  recorded_at: Thu, 14 Jun 2018 13:53:51 GMT
+  recorded_at: Thu, 19 Jul 2018 20:23:52 GMT
 recorded_with: VCR 3.0.3
