--- a/spec/fixtures/vcr_cassettes/media/media/10_14454/05MB-Q396/post_media_for_doi_restful.yml
+++ b/spec/fixtures/vcr_cassettes/media/media/10_14454/05MB-Q396/post_media_for_doi_restful.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: post
-    uri: https://app.test.datacite.org/dois/10.14454/05mb-q396/media
+    uri: https://api.test.datacite.org/dois/10.14454/05mb-q396/media
     body:
       encoding: UTF-8
       string: '{"data":{"type":"media","attributes":{"media-type":"application/pdf","url":"https://schema.datacite.org/meta/kernel-4.1/doc/DataCite-MetadataKernel_v4.1.pdf"}}}'
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.6; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Content-Type:
       - application/vnd.api+json
       Accept:
@@ -21,7 +21,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Thu, 14 Jun 2018 13:53:37 GMT
+      - Thu, 19 Jul 2018 20:21:23 GMT
       Content-Type:
       - application/vnd.api+json; charset=utf-8
       Connection:
@@ -32,21 +32,21 @@ http_interactions:
       - max-age=0, private, must-revalidate
       Vary:
       - Accept-Encoding, Origin
-      Etag:
-      - W/"511974b16fb9d0066ff9349c89a20fdd"
-      X-Runtime:
-      - '0.017417'
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - d67b7448-bfcd-4332-a2e7-7ae912899214
+      - fb98b660-5b97-4a7f-b2ed-a24d013dc05c
+      Etag:
+      - W/"6763553004e152be01a86f1711218f6d"
+      X-Runtime:
+      - '0.019217'
       X-Powered-By:
-      - Phusion Passenger 5.3.2
+      - Phusion Passenger 5.3.3
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.2
+      - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
-      string: '{"data":{"id":"0000-0000-0000-mzxb","type":"media","attributes":{"version":1,"url":"https://schema.datacite.org/meta/kernel-4.1/doc/DataCite-MetadataKernel_v4.1.pdf","media-type":"application/pdf","created":"2018-06-14T13:53:37.000Z","updated":"2018-06-14T13:53:37.000Z"},"relationships":{"doi":{"meta":{}}}}}'
+      string: '{"data":{"id":"0000-0000-0000-n000","type":"media","attributes":{"version":1,"url":"https://schema.datacite.org/meta/kernel-4.1/doc/DataCite-MetadataKernel_v4.1.pdf","media-type":"application/pdf","created":"2018-07-19T20:21:23.000Z","updated":"2018-07-19T20:21:23.000Z"},"relationships":{"doi":{"meta":{}}}}}'
     http_version: 
-  recorded_at: Thu, 14 Jun 2018 13:53:52 GMT
+  recorded_at: Thu, 19 Jul 2018 20:21:24 GMT
 recorded_with: VCR 3.0.3
