--- a/spec/fixtures/vcr_cassettes/metadata/metadata/delete_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/metadata/delete_doi.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: delete
-    uri: https://app.test.datacite.org/dois/10.5072/ey2x-5w17
+    uri: https://api.test.datacite.org/dois/10.5072/ey2x-5w17
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.9; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Accept:
       - text/html,application/json,application/xml;q=0.9, text/plain;q=0.8,image/png,*/*;q=0.5
       Authorization:
@@ -19,7 +19,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sun, 17 Jun 2018 06:54:57 GMT
+      - Thu, 19 Jul 2018 19:20:33 GMT
       Connection:
       - keep-alive
       Status:
@@ -31,16 +31,16 @@ http_interactions:
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - 779e7894-e8a9-4f4d-a297-e0fb2b8d6bfc
+      - 88c99a74-d57c-413c-91e3-2ef915f8c230
       X-Runtime:
-      - '0.017579'
+      - '0.027193'
       X-Powered-By:
-      - Phusion Passenger 5.3.2
+      - Phusion Passenger 5.3.3
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.2
+      - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
       string: ''
     http_version: 
-  recorded_at: Sun, 17 Jun 2018 06:55:00 GMT
+  recorded_at: Thu, 19 Jul 2018 19:20:55 GMT
 recorded_with: VCR 3.0.3
