--- a/spec/fixtures/vcr_cassettes/metadata/metadata/get_metadata_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/metadata/get_metadata_for_doi.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: get
-    uri: https://app.test.datacite.org/10.5072/ey2x-5w17
+    uri: https://api.test.datacite.org/10.5072/ey2x-5w17
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.9; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Accept:
       - application/vnd.datacite.datacite+xml
       Authorization:
@@ -19,21 +19,21 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sun, 17 Jun 2018 06:54:55 GMT
+      - Thu, 19 Jul 2018 19:20:33 GMT
       Content-Type:
       - application/vnd.datacite.datacite+xml
       Connection:
       - keep-alive
       Status:
       - 200 OK
-      X-Anonymous-Consumer:
-      - 'true'
       Cache-Control:
       - private
       Vary:
       - Accept-Encoding, Origin
+      X-Credential-Username:
+      - datacite.datacite
       X-Request-Id:
-      - 178af3c9-c177-4687-b132-02cf8a055c9c
+      - 0f572b4d-4ba7-4e25-ae90-14180a6437c9
       Content-Disposition:
       - attachment; filename=_10.5072_ey2x-5w17.xml
       Content-Transfer-Encoding:
@@ -41,11 +41,11 @@ http_interactions:
       Etag:
       - W/"b06b2128cd5000fe6868a22b3222e344"
       X-Runtime:
-      - '0.007671'
+      - '0.011901'
       X-Powered-By:
-      - Phusion Passenger 5.3.2
+      - Phusion Passenger 5.3.3
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.2
+      - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
       string: |-
@@ -90,5 +90,5 @@ http_interactions:
           </descriptions>
         </resource>
     http_version: 
-  recorded_at: Sun, 17 Jun 2018 06:54:58 GMT
+  recorded_at: Thu, 19 Jul 2018 19:20:55 GMT
 recorded_with: VCR 3.0.3
