--- a/spec/fixtures/vcr_cassettes/metadata/metadata_citeproc/get_metadata_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/metadata_citeproc/get_metadata_for_doi.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: get
-    uri: https://app.test.datacite.org/10.5072/ey8x-9f93
+    uri: https://api.test.datacite.org/10.5072/ey8x-9f93
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.9; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Accept:
       - application/vnd.datacite.datacite+xml
       Authorization:
@@ -19,21 +19,21 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sun, 17 Jun 2018 20:18:18 GMT
+      - Thu, 19 Jul 2018 19:20:41 GMT
       Content-Type:
       - application/vnd.datacite.datacite+xml
       Connection:
       - keep-alive
       Status:
       - 200 OK
-      X-Anonymous-Consumer:
-      - 'true'
       Cache-Control:
       - private
       Vary:
       - Accept-Encoding, Origin
+      X-Credential-Username:
+      - datacite.datacite
       X-Request-Id:
-      - 8898a78a-0e97-41de-99a4-bf76cb4a1765
+      - 1ca5be11-4db0-4dac-998e-587f0d213b64
       Content-Disposition:
       - attachment; filename=_10.5072_ey8x-9f93.xml
       Content-Transfer-Encoding:
@@ -41,11 +41,11 @@ http_interactions:
       Etag:
       - W/"5c9ccfce00086a4f6db262b4615f9044"
       X-Runtime:
-      - '0.007319'
+      - '0.011906'
       X-Powered-By:
-      - Phusion Passenger 5.3.2
+      - Phusion Passenger 5.3.3
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.2
+      - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
       string: |
@@ -74,5 +74,5 @@ http_interactions:
           </descriptions>
         </resource>
     http_version: 
-  recorded_at: Sun, 17 Jun 2018 20:18:18 GMT
+  recorded_at: Thu, 19 Jul 2018 19:21:03 GMT
 recorded_with: VCR 3.0.3
