--- a/spec/fixtures/vcr_cassettes/metadata/metadata_doi_from_xml/get_metadata_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/metadata_doi_from_xml/get_metadata_for_doi.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: get
-    uri: https://app.test.datacite.org/10.5438/08a0-3f64
+    uri: https://api.test.datacite.org/10.5438/08a0-3f64
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.9; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Accept:
       - application/vnd.datacite.datacite+xml
       Authorization:
@@ -19,21 +19,21 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sun, 17 Jun 2018 13:12:32 GMT
+      - Thu, 19 Jul 2018 19:20:34 GMT
       Content-Type:
       - application/vnd.datacite.datacite+xml
       Connection:
       - keep-alive
       Status:
       - 200 OK
-      X-Anonymous-Consumer:
-      - 'true'
       Cache-Control:
       - private
       Vary:
       - Accept-Encoding, Origin
+      X-Credential-Username:
+      - datacite.datacite
       X-Request-Id:
-      - 017c368b-a7f4-4895-ab1d-cd5a3184fe5d
+      - 3d946f3a-c6c6-49b4-b920-5be2344ce9b3
       Content-Disposition:
       - attachment; filename=_10.5438_08a0-3f64.xml
       Content-Transfer-Encoding:
@@ -41,11 +41,11 @@ http_interactions:
       Etag:
       - W/"6e86b6704bc799a8183dd2b5642e623b"
       X-Runtime:
-      - '0.007649'
+      - '0.010454'
       X-Powered-By:
-      - Phusion Passenger 5.3.2
+      - Phusion Passenger 5.3.3
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.2
+      - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
       string: |-
@@ -90,5 +90,5 @@ http_interactions:
           </descriptions>
         </resource>
     http_version: 
-  recorded_at: Sun, 17 Jun 2018 13:12:36 GMT
+  recorded_at: Thu, 19 Jul 2018 19:20:56 GMT
 recorded_with: VCR 3.0.3
