--- a/spec/fixtures/vcr_cassettes/metadata/metadata_schema_org/delete_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/metadata_schema_org/delete_doi.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: delete
-    uri: https://app.test.datacite.org/dois/10.5072/x86n-nm18
+    uri: https://api.test.datacite.org/dois/10.5072/x86n-nm18
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.9; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Accept:
       - text/html,application/json,application/xml;q=0.9, text/plain;q=0.8,image/png,*/*;q=0.5
       Authorization:
@@ -19,7 +19,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sun, 17 Jun 2018 20:17:57 GMT
+      - Thu, 19 Jul 2018 19:20:39 GMT
       Connection:
       - keep-alive
       Status:
@@ -31,16 +31,16 @@ http_interactions:
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - 16f5ed72-2462-404e-993e-67b2e2a6ab7d
+      - e79e2e12-4776-45a9-8f1e-423d872e64e4
       X-Runtime:
-      - '0.017700'
+      - '0.024251'
       X-Powered-By:
-      - Phusion Passenger 5.3.2
+      - Phusion Passenger 5.3.3
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.2
+      - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
       string: ''
     http_version: 
-  recorded_at: Sun, 17 Jun 2018 20:17:57 GMT
+  recorded_at: Thu, 19 Jul 2018 19:21:01 GMT
 recorded_with: VCR 3.0.3
