--- a/spec/fixtures/vcr_cassettes/metadata/no_metadata/delete_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/no_metadata/delete_doi.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: delete
-    uri: https://app.test.datacite.org/dois/10.5072/236y-qx15
+    uri: https://api.test.datacite.org/dois/10.5072/236y-qx15
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.9; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Accept:
       - text/html,application/json,application/xml;q=0.9, text/plain;q=0.8,image/png,*/*;q=0.5
       Authorization:
@@ -19,7 +19,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sun, 17 Jun 2018 18:15:09 GMT
+      - Thu, 19 Jul 2018 19:20:38 GMT
       Connection:
       - keep-alive
       Status:
@@ -31,16 +31,16 @@ http_interactions:
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - f44a6b19-674b-471d-a534-9855d90adf49
+      - 7a10f27c-360c-4f17-83ba-232c04a5faaf
       X-Runtime:
-      - '0.015713'
+      - '0.023485'
       X-Powered-By:
-      - Phusion Passenger 5.3.2
+      - Phusion Passenger 5.3.3
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.2
+      - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
       string: ''
     http_version: 
-  recorded_at: Sun, 17 Jun 2018 18:15:11 GMT
+  recorded_at: Thu, 19 Jul 2018 19:21:00 GMT
 recorded_with: VCR 3.0.3
