--- a/spec/fixtures/vcr_cassettes/metadata/no_metadata/get_metadata_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/no_metadata/get_metadata_for_doi.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: get
-    uri: https://app.test.datacite.org/10.5072/236y-qx15
+    uri: https://api.test.datacite.org/10.5072/236y-qx15
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.9; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Accept:
       - application/vnd.datacite.datacite+xml
       Authorization:
@@ -19,34 +19,34 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sun, 17 Jun 2018 18:15:08 GMT
+      - Thu, 19 Jul 2018 19:20:38 GMT
       Content-Type:
       - application/vnd.datacite.datacite+xml
       Connection:
       - keep-alive
       Status:
       - 200 OK
-      X-Anonymous-Consumer:
-      - 'true'
       Cache-Control:
       - private
       Vary:
       - Accept-Encoding, Origin
+      X-Credential-Username:
+      - datacite.datacite
       X-Request-Id:
-      - b8ac41ef-f762-46f2-a413-9bed094eedee
+      - '0249cc5e-e231-47b1-9f70-194315565204'
       Content-Disposition:
       - attachment; filename=_10.5072_236y-qx15.xml
       Content-Transfer-Encoding:
       - binary
       X-Runtime:
-      - '0.005541'
+      - '0.009363'
       X-Powered-By:
-      - Phusion Passenger 5.3.2
+      - Phusion Passenger 5.3.3
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.2
+      - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
       string: ''
     http_version: 
-  recorded_at: Sun, 17 Jun 2018 18:15:10 GMT
+  recorded_at: Thu, 19 Jul 2018 19:21:00 GMT
 recorded_with: VCR 3.0.3
