--- a/spec/fixtures/vcr_cassettes/metadata/no_metadata/post_metadata_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/no_metadata/post_metadata_for_doi.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: put
-    uri: https://app.test.datacite.org/dois/10.5072/236y-qx15
+    uri: https://api.test.datacite.org/dois/10.5072/236y-qx15
     body:
       encoding: UTF-8
-      string: '{"data":{"type":"dois","attributes":{},"relationships":{"client":{"data":{"type":"clients","id":"DATACITE.DATACITE"}}}}}'
+      string: '{"data":{"type":"dois","attributes":{"doi":"10.5072/236y-qx15","event":"publish"},"relationships":{"client":{"data":{"type":"clients","id":"DATACITE.DATACITE"}}}}}'
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.9; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
       Content-Type:
       - application/vnd.api+json
       Accept:
@@ -21,7 +21,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sun, 17 Jun 2018 18:15:06 GMT
+      - Thu, 19 Jul 2018 19:20:38 GMT
       Content-Type:
       - application/vnd.api+json; charset=utf-8
       Connection:
@@ -32,21 +32,21 @@ http_interactions:
       - max-age=0, private, must-revalidate
       Vary:
       - Accept-Encoding, Origin
-      Etag:
-      - W/"920c369cdbe679c0868aacef837a02a1"
-      X-Runtime:
-      - '0.073188'
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - f03c7aa1-7550-4b00-81f6-3ba5d53c98e2
+      - 4067081b-a7f6-4c04-afe0-269d45d28fa9
+      Etag:
+      - W/"ff9e1cf1bd89fae4fbb7f7f4a7df132b"
+      X-Runtime:
+      - '0.063662'
       X-Powered-By:
-      - Phusion Passenger 5.3.2
+      - Phusion Passenger 5.3.3
       Server:
-      - nginx/1.14.0 + Phusion Passenger 5.3.2
+      - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
-      string: '{"data":{"id":"10.5072/236y-qx15","type":"dois","attributes":{"doi":"10.5072/236y-qx15","prefix":"10.5072","suffix":"236y-qx15","identifier":"https://handle.test.datacite.org/10.5072/236y-qx15","url":null,"author":[],"title":null,"publisher":null,"resource-type-subtype":null,"description":null,"version":null,"metadata-version":0,"schema-version":"http://datacite.org/schema/kernel-4","state":"draft","is-active":true,"reason":null,"landing-page":{"status":null,"content-type":null,"checked":null},"xml":null,"published":null,"registered":null,"updated":"2018-06-17T18:15:06.000Z"},"relationships":{"client":{"meta":{}},"provider":{"meta":{}},"resource-type":{"meta":{}},"media":{"meta":{}}}}}'
+      string: '{"data":{"id":"10.5072/236y-qx15","type":"dois","attributes":{"doi":"10.5072/236y-qx15","prefix":"10.5072","suffix":"236y-qx15","identifier":"https://handle.test.datacite.org/10.5072/236y-qx15","url":null,"author":[],"title":null,"publisher":null,"resource-type-subtype":null,"description":null,"version":null,"metadata-version":0,"schema-version":"http://datacite.org/schema/kernel-4","state":"draft","is-active":false,"reason":null,"landing-page":{"status":null,"content-type":null,"checked":null},"xml":null,"published":null,"created":"2018-07-19T19:20:38.000Z","registered":null,"updated":"2018-07-19T19:20:38.000Z"},"relationships":{"client":{"meta":{}},"provider":{"meta":{}},"resource-type":{"meta":{}},"media":{"meta":{}}}}}'
     http_version: 
-  recorded_at: Sun, 17 Jun 2018 18:15:08 GMT
+  recorded_at: Thu, 19 Jul 2018 19:21:00 GMT
 recorded_with: VCR 3.0.3
