--- a/spec/fixtures/vcr_cassettes/metadata/metadata_schema_org_as_url/get_metadata_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/metadata/metadata_schema_org_as_url/get_metadata_for_doi.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.test.datacite.org/10.5072/dvn/hscunb
+    uri: https://api.test.datacite.org/10.5072/dvn/hscunzz
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
+      - Mozilla/5.0 (compatible; Maremma/4.1; +https://github.com/datacite/maremma)
       Accept:
       - application/vnd.datacite.datacite+xml
       Authorization:
@@ -19,7 +19,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Fri, 03 Aug 2018 17:42:06 GMT
+      - Mon, 06 Aug 2018 16:40:40 GMT
       Content-Type:
       - application/vnd.datacite.datacite+xml
       Connection:
@@ -33,15 +33,15 @@ http_interactions:
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - 547def00-7972-4104-82bb-1f596eefa0ae
+      - 37507a51-f60a-44a7-a9b2-8321e0ea2d9e
       Content-Disposition:
-      - attachment; filename=_10.5072_dvn_hscunb.xml
+      - attachment; filename=_10.5072_dvn_hscunzz.xml
       Content-Transfer-Encoding:
       - binary
       Etag:
-      - W/"dfbeba3997af9205a66bd670e6e18959"
+      - W/"a8eb65c72c2ddd52e7e010ae2f6c1f41"
       X-Runtime:
-      - '0.016505'
+      - '0.026704'
       X-Powered-By:
       - Phusion Passenger 5.3.4
       Server:
@@ -51,7 +51,7 @@ http_interactions:
       string: |
         <?xml version="1.0" encoding="UTF-8"?>
         <resource xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://datacite.org/schema/kernel-4" xsi:schemaLocation="http://datacite.org/schema/kernel-4 http://schema.datacite.org/meta/kernel-4/metadata.xsd">
-          <identifier identifierType="DOI">10.5072/DVN/HSCUNB</identifier>
+          <identifier identifierType="DOI">10.5072/DVN/HSCUNZZ</identifier>
           <creators>
             <creator>
               <creatorName>Stevens, Vidar</creatorName>
@@ -85,5 +85,5 @@ http_interactions:
           </descriptions>
         </resource>
     http_version: 
-  recorded_at: Fri, 03 Aug 2018 17:42:06 GMT
+  recorded_at: Mon, 06 Aug 2018 16:40:40 GMT
 recorded_with: VCR 3.0.3
