--- a/spec/fixtures/vcr_cassettes/media/media/10_14454/05MB-Q396/delete_media_for_doi.yml
+++ b/spec/fixtures/vcr_cassettes/media/media/10_14454/05MB-Q396/delete_media_for_doi.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: delete
-    uri: https://api.test.datacite.org/dois/10.14454/05mb-q396/media/0000-0000-0000-n06t
+    uri: https://api.test.datacite.org/dois/10.14454/05mb-q396/media/0000-0000-0000-n070
     body:
       encoding: US-ASCII
       string: ''
@@ -17,33 +17,32 @@ http_interactions:
       - Basic <MDS_TOKEN>
   response:
     status:
-      code: 404
+      code: 204
       message: ''
     headers:
       Date:
-      - Tue, 20 Nov 2018 22:41:06 GMT
-      Content-Type:
-      - application/json; charset=utf-8
+      - Tue, 20 Nov 2018 23:09:40 GMT
       Connection:
       - keep-alive
       Status:
-      - 404 Not Found
+      - 204 No Content
       Cache-Control:
       - no-cache
       Vary:
-      - Accept-Encoding, Origin
+      - Origin
+      X-Credential-Username:
+      - datacite.datacite
       X-Request-Id:
-      - 79abb5c8-1e0b-4115-82c0-0db7ffcebf4b
+      - 3625f515-b5e5-4e82-84bd-39bc9a0eeade
       X-Runtime:
-      - '0.010319'
+      - '0.018902'
       X-Powered-By:
       - Phusion Passenger 5.3.7
       Server:
       - nginx/1.14.0 + Phusion Passenger 5.3.7
     body:
       encoding: ASCII-8BIT
-      string: '{"errors":[{"status":"404","title":"The resource you are looking for
-        doesn''t exist."}]}'
+      string: ''
     http_version: 
-  recorded_at: Tue, 20 Nov 2018 22:41:06 GMT
+  recorded_at: Tue, 20 Nov 2018 23:09:40 GMT
 recorded_with: VCR 3.0.3
